--- a/src/Components/Pages/CourseGallery.css
+++ b/src/Components/Pages/CourseGallery.css
@@ -1,7 +1,7 @@
 .card-list {
   column-count: 3;
-  /* display: flex; */
-  /* flex-flow: col; */
+  display: flex;
+  flex-flow: col;
 }
 .card--image {
   margin-top: 1rem;
